Fix the script so that it can run with relative paths using cooja.jar.